ingress-canary/v2-ingress-canary-2.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx

    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "90"

  name: go-demo-v2
spec:
  rules:
    - host: go-demo.example.com
      http:
        paths:
          - backend:
              serviceName: go-demo-v2
              servicePort: 80
            path: /
